# grammers-grpc-server

./: .gitignore  Cargo.toml
src/: app_config.rs  error.rs  lib.rs  logger.rs  main.rs  telegram.rs
src/telegram/: close_session.rs  create_session.rs  domain.rs  error.rs  get_channels_list.rs  get_dialogs_list.rs  get_new_messages.rs  grammers_repository.rs  models.rs
src/telegram/domain/: close_session.rs  create_session.rs  get_channels_list.rs  get_new_messages.rs  utils.rs
src/telegram/models/: tg_messages_bus.rs  ts_message.rs
