[package]
name = "grammers-grpc-server"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "grammers-grpc-server"


[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
dialoguer = "0.12.0"
dotenvy = "0.15.7"
env_logger = "0.11.8"
grammers-client = { git = "https://github.com/Lonami/grammers" }
grammers-session = { git = "https://github.com/Lonami/grammers" }
log = "0.4.27"
secrecy = { version = "0.10.3", features = ["serde"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "io-util", "io-std"] }
